mdapi/objects/Star__c.object
<CustomObject>
    <description>Stars in the Galaxy</description>
    <fields>
        <fullName>Galaxy__c</fullName>
        <description>Galaxy in which the Star resides</description>
        <inlineHelpText>Galaxy in which the Star resides</inlineHelpText>
        <label>Galaxy</label>
        <referenceTo>Galaxy__c</referenceTo>
        <relationshipLabel>Stars</relationshipLabel>
        <relationshipName>Stars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Size in millions of miles</description>
        <inlineHelpText>Size in millions of miles</inlineHelpText>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Star color</description>
        <inlineHelpText>Star color</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Star</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Star Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>